<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Operator</string>
    <string name="title_routes">My routes</string>
    <string name="title_prizes">My prizes</string>
    <string name="title_verify">Validate won prize</string>
    <string name="title_profile">My profile</string>
    <string name="title_logout">Log out</string>

    <string name="shared_preferences_key">shared_pref</string>
    <string name="saved_username">username</string>
    <string name="saved_password">password</string>
    <string name="saved_use_fb">use_fb</string>
    <string name="saved_auto_login">auto_login</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="route_name_tag">Name</string>
    <string name="route_description_tag">Description</string>
    <string name="route_tags_tag">Tags</string>
    <string name="route_validity_tag">Validity days</string>
    <string name="route_tags_label">Tags: </string>
    <string name="route_validity_label">Validity days: </string>
    <string name="route_delete_btn">Delete</string>
    <string name="route_edit_btn">Edit</string>
    <string name="route_save_edits">Save</string>
    <string name="route_cancel_edits">Cancel</string>
    <string name="route_new_btn_content_description">Add new route</string>
    <string name="route_tag_delete_btn_content_description">delete</string>
    <string name="new_tag_btn_content_description">Add new tag</string>
    <string name="objective_error_city">Objective inserted in unknown city</string>
    <string name="objective_error_marker">Error, reference to map marker lost, please edit it again</string>
    <string name="objective_unknown_city">Unknown</string>

    <string name="dialog_confirm_btn">Confirm</string>
    <string name="dialog_cancel_btn">Cancel</string>
    <string name="dialog_delete_btn">Delete</string>
    <string name="dialog_tag">dialog</string>
    <string name="dialog_title_new_objective">New objective</string>
    <string name="dialog_title_edit_objective">Edit objective</string>
    <string name="dialog_title_tags">Select new tags</string>
    <string name="dialog_title_delete">Confirm deletion</string>
    <string name="dialog_title_new_prize">Select or create?</string>
    <string name="dialog_title_select_prize">Select the prize</string>
    <string name="dialog_title_connection_error">Connection Error</string>
    <string name="dialog_msg_check_connection">Please check your internet connection</string>
    <string name="dialog_msg_new_prize">Do you want to create a new prize or select an existing one to be added to this route?</string>
    <string name="dialog_confirm_delete_msg">Are you sure you want to delete?</string>
    <string name="dialog_create_option">Create</string>
    <string name="dialog_select_option">Select</string>
    <string name="dialog_ok_option">Ok</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="wait_message">Please wait…</string>
    <string name="loading_tags_message">Loading tags</string>
    <string name="loading_webservice_message">Loading from Web Service</string>
    <string name="loading_verifying">Verifying prize</string>
    <string name="saving_message">Saving edits</string>
    <string name="deleting_message">Deleting</string>

    <string name="help_title">Help</string>
    <string name="help_default_msg">Default help message, to be replaced</string>
    <string name="help_edit_routes">To add or remove an objective from a route, simply touch it.\nTo add a new custom objective, long touch the map.\nTo edit a newly added objective, touch it.</string>
    <string name="help_edit_prizes">To add or remove a mandatory objective from a prize, simply touch it.</string>
    <string name="help_btn_text">\?</string>
    <string name="successful_save">Saved successfully</string>
    <string name="successful_delete">Deleted successfully</string>
    <string name="description_label">Description</string>

    <string name="select_route_instruction">Please, first select a route:</string>
    <string name="select_btn_text">Select</string>
    <string name="name_label">Name</string>
    <string name="prize_name_label">Title:</string>
    <string name="prize_description_label">Description:</string>
    <string name="prize_visible_label">Visible for users:</string>
    <string name="prize_repeat_label">Days between different gains:</string>
    <string name="default_name">Name</string>
    <string name="default_description">Description</string>
    <string name="prize_probability_label">Probability to be won:</string>
    <string name="prize_no_selectables">No prizes to select</string>
    <string name="prize_error_no_mand_obj">Please, select at least one mandatory objective</string>
    <string name="edit_content_description">edit</string>
    <string name="percentage_sign">%</string>

    <string name="title_prize_won">Prize information</string>
    <string name="validation_wrong_code">The scanned code is invalid.</string>
    <string name="validation_wrong_operator">The prize belongs to another operator.</string>
    <string name="validation_no_scanner">You don\'t have any app that can scan a QR Code.\nPlease install one first.</string>
    <string name="validate_btn_text">Validate another prize</string>
    <string name="validation_already_done">The prize was already validated on %1$s.</string>
    <string name="validation_no_scanner_title">Install QR code reader?</string>
    <string name="validation_no_scanner_message">You don\'t have any app that can read a QR Code.\nDo you want to install it?</string>
    <string name="validation_no_scanner_not_now">Not now</string>
    <string name="validation_no_scanner_install">Install</string>

    <string name="title_activity_login">Log in</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="register_btn_text">Register</string>
    <string name="loading_login">Logging in</string>
    <string name="login_error_title">Login error</string>
    <string name="login_error_empty">Please insert your credentials</string>
    <string name="login_error_not_operator">This is not an operator account.</string>
    <string name="login_error_wrong_credentials">The supplied credentials are incorrect.</string>
    <string name="connect_fb_message">You used to login as %1$s, would you like to connect that account to facebook, or rather create a new account?</string>
    <string name="connect_fb_title">Connect account?</string>
    <string name="dialog_connect_btn">Connect</string>
    <string name="dialog_new_account_btn">New Account</string>
    <string name="auto_login_text">Auto login</string>

    <string name="title_activity_register">Register</string>
    <string name="company_label">Company</string>
    <string name="county_label">Country</string>
    <string name="city_label">City</string>
    <string name="address_label">Address</string>
    <string name="tags_label">Tags</string>
    <string name="register_error_empty">Please fill all the fields.</string>
    <string name="register_error_incorrect_address">Your address couldn\'t be resolved.\nPlease check it is correct.</string>
    <string name="loading_register">Signing up</string>
    <string name="username_taken_title">Username already taken</string>
    <string name="username_taken_message">The username you chosen is already taken.\nPlease use a different one.</string>
    <string name="unexpected_error_title">Unexpected error</string>
    <string name="unexpected_error_message">An unexpected error occurred.\nPlease try again.</string>

    <string name="facebook_app_id">114788992197216</string>
    <string name="login_alt_msg">Or login with your account</string>
    <string name="fb_share_url">http://daniele.cortesi2.web.cs.unibo.it/wsgi</string>
    <string name="fb_share_img_url">http://daniele.cortesi2.web.cs.unibo.it/wsgi/static/discountwalk.jpg</string>
    <string name="fb_share_title">Someone just won \"%1$s\" with DiscountWalk!</string>
    <string name="fb_share_message">By completing one of our routes, they got:\n%1$s</string>
    <string name="fb_share_button">Share</string>
    <string name="fb_share_button_disabled">Already shared</string>

</resources>

