<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/template_padding" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/prize_name_edit"
            android:src="@drawable/ic_route_edit"
            style="@style/img_button_gray_gray_theme"
            android:contentDescription="@string/edit_content_description"
            android:layout_width="@dimen/route_edit_field_btn_size"
            android:layout_height="@dimen/route_edit_field_btn_size"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/prize_name"
            android:textSize="@dimen/route_name_size"
            style="@style/text_theme"
            android:tag="@string/route_name_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <ImageButton
            android:id="@+id/prize_description_edit"
            android:src="@drawable/ic_route_edit"
            style="@style/img_button_gray_gray_theme"
            android:contentDescription="@string/edit_content_description"
            android:layout_width="@dimen/route_edit_field_btn_size"
            android:layout_height="@dimen/route_edit_field_btn_size"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/prize_description"
            android:textSize="@dimen/route_text_size"
            style="@style/text_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <ImageButton
            android:id="@+id/prize_probability_edit"
            android:src="@drawable/ic_route_edit"
            style="@style/img_button_gray_gray_theme"
            android:contentDescription="@string/edit_content_description"
            android:layout_width="@dimen/route_edit_field_btn_size"
            android:layout_height="@dimen/route_edit_field_btn_size"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/prize_probability_label"
                android:textSize="@dimen/route_text_size"
                style="@style/text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/prize_probability"
                android:textSize="@dimen/route_text_size"
                style="@style/text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/route_validity_margin"
                android:layout_marginStart="@dimen/route_validity_margin" />
            <TextView
                android:text="@string/percentage_sign"
                android:textSize="@dimen/route_text_size"
                style="@style/text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <ImageButton
            android:id="@+id/prize_visible_edit"
            android:src="@drawable/ic_route_edit"
            style="@style/img_button_gray_gray_theme"
            android:contentDescription="@string/edit_content_description"
            android:layout_width="@dimen/route_edit_field_btn_size"
            android:layout_height="@dimen/route_edit_field_btn_size"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/prize_visible_label"
                android:textSize="@dimen/route_text_size"
                style="@style/text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/prize_visible"
                android:textSize="@dimen/route_text_size"
                style="@style/text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/route_validity_margin"
                android:layout_marginStart="@dimen/route_validity_margin" />
        </LinearLayout>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">
        <ImageButton
            android:id="@+id/prize_repeat_edit"
            android:src="@drawable/ic_route_edit"
            style="@style/img_button_gray_gray_theme"
            android:contentDescription="@string/edit_content_description"
            android:layout_width="@dimen/route_edit_field_btn_size"
            android:layout_height="@dimen/route_edit_field_btn_size"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:text="@string/prize_repeat_label"
                android:textSize="@dimen/route_text_size"
                style="@style/text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/prize_repeat"
                android:textSize="@dimen/route_text_size"
                style="@style/text_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/route_validity_margin"
                android:layout_marginStart="@dimen/route_validity_margin" />
        </LinearLayout>
    </TableRow>


</TableLayout>